# urmsim

./: Cargo.toml  LICENSE  README.md  suc.urm  test.urm
src/: machine.rs  main.rs  parser.rs  prompt.rs
