[package]
name = "urmsim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
comfy-table = "6.1.4"
dialoguer = { version = "0.10.3", features = ["history"] }
owo-colors = "3.5.0"
